# inference-service

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements-gpu.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml
infsvc/: __init__.py  cli.py  config.py  cost.py  finops.py  schemas.py  settings.py
infsvc/backends/: base.py  mock.py  tgi.py  transformers.py  vllm.py
infsvc/bench/: metrics.py  report.py  runner.py  scenarios.py  store.py  workload.py
infsvc/gateway/: app.py  auth.py  observability.py  ratelimit.py  router.py
loadtest/: k6.js  locustfile.py
observability/: alerts.yml  prometheus.yml
observability/grafana/dashboards/: inference.json
observability/grafana/provisioning/dashboards/: dashboards.yml
tests/: test_bench_smoke.py  test_cost.py  test_finops.py  test_metrics.py  test_mock_backend.py
