[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-service"
version = "0.1.0"
description = "Optimized model inference service with a benchmark harness"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["infsvc"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
